frontend: add light and dark variants to bulma color map

--- a/frontend/assets/vars/bulma.scss
+++ b/frontend/assets/vars/bulma.scss
@@ -5,25 +5,34 @@
   */
 
 $primary: hsl(260, 26%, 38%);
-$primary-light: hsl(260, 26%, 45%);
-$primary-dark: hsl(260, 26%, 25%);
+$primary-light: findLightColor($primary);
+$primary-dark: findDarkColor($primary);
+// $primary-light: hsl(260, 26%, 45%);
+// $primary-dark: hsl(260, 26%, 25%);
 
 $secondary: hsl(129, 65%, 45%) ;
 
 $success: hsl(127, 67%, 55%);
+$success-light: findLightColor($success);
+$success-dark: findDarkColor($success);
 $warning: hsl(64, 68%, 54%);
+$warning-light: findLightColor($warning);
+$warning-dark: findDarkColor($warning);
 $danger: hsl(6, 61%, 52%);
+$danger-light: findLightColor($danger);
+$danger-dark: findDarkColor($danger);
 
 $colors: (
     "white": ($white, $black),
     "black": ($black, $white),
     "light": ($light, $light-invert),
     "dark": ($dark, $dark-invert),
-    "primary": ($primary, $primary-invert),
-    "info": ($info, $info-invert),
-    "success": ($success, $success-invert),
-    "warning": ($warning, $warning-invert),
-    "danger": ($danger, $danger-invert),
+    "primary": ($primary, $primary-invert, $primary-light, $primary-dark),
+    "link": ($link, $link-invert, $link-light, $link-dark),
+    "info": ($info, $info-invert, $info-light, $info-dark),
+    "success": ($success, $success-invert, $success-light, $success-dark),
+    "warning": ($warning, $warning-invert, $warning-light, $warning-dark),
+    "danger": ($danger, $danger-invert, $danger-light, $danger-dark),
 );
 
 
